# data-science-algorithms

./: README.md  main.py  pyproject.toml
src/data_science/: classification.py  clustering.py  dim_reduction.py  evaluation.py  nlp.py  regression.py  reinforcement.py
src/data_science/etl/: data_extractor.py  data_loader.py  data_transformer.py
src/data_science/neural_network/: convolutional.py  feedforward .py  recurrent.py
